--- a/Frontpage/index.html
+++ b/Frontpage/index.html
@@ -15,23 +15,23 @@
         <a href="#" class="collection" >Collection Setsuna</a>
       </div>
       <div class="rightArea">
-        Welcome to the Setsuna!<a href="#"> Login in</a><a href="#">Sign Up</a> 
+        Welcome to the Setsuna!<a href="#">【登录】</a>  <a href="#">【注册】</a> 
       </div>
     </div>
   </div>
   
   <div class="logoBar">
      <div class="comWidth">
-        <div class="logo">
-           <a href="#"><img src="#" alt="以月为阳"></a>
+        <div class="logo fl">
+           <a href="#"><img src="images/logo.jpg" alt="以月为阳"></a>
         </div>
-     <div class="search_box">
-        <input type="text" class="search_text">
-        <input type="button" value="搜 索" class="search_btn">
+     <div class="search_box fl">
+        <input type="text" class="search_text fl">
+        <input type="button" value="搜 索" class="search_btn fr">
      </div>
-        <div class="shopBar">
-          <span class="shopText">购物车</span>
-          <span class="shopNum">0</span>
+        <div class="shopCar fr">
+          <span class="shopText fl">购物车</span>
+          <span class="shopNum fr">0</span>
         </div>
   </div>
   <div class="navBox">
