--- a/Frontpage/index.html
+++ b/Frontpage/index.html
@@ -2,45 +2,105 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>Frontpage</title>
 <link type="text/css" rel="stylesheet" href="style/reset.css">
 <link type="text/css" rel="stylesheet" href="style/main.css">
 </head>
-
 <body>
 <div class="headBar">
-  <div class="topBar">
-    <div class="comWidth">
-      <div class="leftArea">
-        <a href="#" class="collection" >Collection Setsuna</a>
-      </div>
-      <div class="rightArea">
-        Welcome to the Setsuna!<a href="#">【登录】</a>  <a href="#">【注册】</a> 
-      </div>
+    <div class="topBar">
+        <div class="comWidth">
+            <div class="leftArea">
+                <a href="#" class="collection" >Collection Setsuna</a>
+            </div>
+            <div class="rightArea">
+                Welcome to the Setsuna!<a href="#">【登录】</a>  <a href="#">【注册】</a> 
+            </div>
+         </div>
     </div>
-  </div>
-  
-  <div class="logoBar">
-     <div class="comWidth">
-        <div class="logo fl">
-           <a href="#"><img src="images/logo.jpg" alt="以月为阳"></a>
-        </div>
-     <div class="search_box fl">
-        <input type="text" class="search_text fl">
-        <input type="button" value="搜 索" class="search_btn fr">
-     </div>
-        <div class="shopCar fr">
-          <span class="shopText fl">购物车</span>
-          <span class="shopNum fr">0</span>
-        </div>
-  </div>
+    <div class="logoBar">
+        <div class="comWidth">
+            <div class="logo fl">
+                <a href="#"><img src="images/logo.jpg" alt="以月为阳"></a>
+            </div>
+            <div class="search_box fl">
+                <input type="text" class="search_text fl">
+                <input type="button" value="搜 索" class="search_btn fr">
+            </div>
+            <div class="shopCar fr">
+                <span class="shopText fl">购物车</span>
+                <span class="shopNum fr">0</span>
+            </div>
+         </div>
+    </div>         
   <div class="navBox">
      <div class="comWidth">
-        <div class="shopClass">
-           <h3>全部商品分类</h3>
+        <div class="shopClass fl">
+            <h3>全部商品分类<i></i></h3>
+            <div class="shopClass_show">
+                <dl class="shopClass_item">
+                    <dt>
+                      <a href="#" class="b">手机</a> 
+                      <a href="#" class="b">数码</a>
+                      <a href="#" class="aLink">合约机</a>
+                    </dt>
+                    <dd>
+                      <a href="#">荣耀3X</a>
+                      <a href="#">单反</a><a href="#">智能设备</a>
+                    </dd>
+                 </dl>   
+                 <dl class="shopClass_item">
+                    <dt>
+                      <a href="#" class="b">手机</a> 
+                      <a href="#" class="b">数码</a>
+                      <a href="#" class="aLink">合约机</a>
+                    </dt>
+                    <dd>
+                      <a href="#">荣耀3X</a> 
+                      <a href="#">单反</a>
+                      <a href="#">智能设备</a>
+                    </dd>
+                 </dl>   
+                 <dl class="shopClass_item">
+                    <dt>
+                      <a href="#" class="b">手机</a> 
+                      <a href="#" class="b">数码</a>
+                      <a href="#" class="aLink">合约机</a>
+                    </dt>
+                    <dd>
+                      <a href="#">荣耀3X</a> 
+                      <a href="#">单反</a>
+                      <a href="#">智能设备</a>
+                    </dd>
+                 </dl>   
+                 <dl class="shopClass_item">
+                    <dt>
+                      <a href="#" class="b">手机</a> 
+                      <a href="#" class="b">数码</a>
+                      <a href="#" class="aLink">合约机</a>
+                    </dt>
+                    <dd>
+                      <a href="#">荣耀3X</a> 
+                      <a href="#">单反</a>
+                      <a href="#">智能设备</a>
+                    </dd>
+                 </dl>   
+                 <dl class="shopClass_item">
+                    <dt>
+                      <a href="#" class="b">手机</a> 
+                      <a href="#" class="b">数码</a>
+                      <a href="#" class="aLink">合约机</a>
+                    </dt>
+                    <dd>
+                      <a href="#">荣耀3X</a> 
+                      <a href="#">单反</a>
+                      <a href="#">智能设备</a>
+                    </dd>
+                 </dl>   
         </div>
-        <ul class="nav">
-          <li><a href="#">数码城</a></li>
+      </div>  
+        <ul class="nav fl">
+          <li><a href="#" class="active">数码城</a></li>
           <li><a href="#">天黑黑</a></li>
           <li><a href="#">团购</a></li>
           <li><a href="#">发现</a></li>
@@ -49,6 +109,6 @@
         </ul>
        </div>
     </div>
-  </div>> 
+</div>
 </body>
 </html>
